// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Delete Post Controller Snapshot Test for author not found. 1`] = `
{
  "body": {
    "message": "User doesn't exist. Please create your account.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Delete Post Controller Snapshot Test for internal server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while deleting post.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Delete Post Controller Snapshot Test for no permission to delete post. 1`] = `
{
  "body": {
    "message": "No permission to delete this post article.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Delete Post Controller Snapshot Test for not valid post Id. 1`] = `
{
  "body": {
    "message": "Invalid userID or postID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Delete Post Controller Snapshot Test for not valid user Id. 1`] = `
{
  "body": {
    "message": "Invalid userID or postID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Delete Post Controller Snapshot Test for post deleted successfully. 1`] = `
{
  "body": {
    "data": {
      "_id": "69a8652b69726b384c21b27d",
      "author": "507f1f77bcf86cd799439011",
      "comments": 12,
      "createdAt": "2026-03-04T17:00:19.599Z",
      "deletedAt": "2026-03-04T17:40:19.599Z",
      "description": "postDescription",
      "isPinned": false,
      "isTrashed": false,
      "like": 924,
      "title": "postTitle",
      "updatedAt": "2026-03-04T17:40:19.599Z",
    },
    "message": "Article deleted successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Delete Post Controller Snapshot Test for post not found. 1`] = `
{
  "body": {
    "message": "Posted article not found.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Delete Post Controller Snapshot Test for user Id or post Id not found. 1`] = `
{
  "body": {
    "message": "Oops! user ID or post ID is not found.",
    "success": false,
  },
  "status": 400,
}
`;
